--- a/about-us.htm
+++ b/about-us.htm
@@ -139,16 +139,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-20-node-share-links.htm" title="4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-111165.htm" title="佳雯宠物医院几点开门上班（佳雯宠物医院上班时间）">佳雯宠物医院几点开门上班（佳雯宠物医院上班时间）</a></li>
+                        <li class="py-2"><a href="/news/article-91721.htm" title="liunx中搭建python3.7环境和安装pycharm并搭建Django">liunx中搭建python3.7环境和安装pycharm并搭建Django</a></li>
+                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-26-free-node-subscribe.htm" title="4月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">4月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-node-share.htm" title="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-91722.htm" title="vue实现拖拽排序、移除">vue实现拖拽排序、移除</a></li>
+                        <li class="py-2"><a href="/news/article-98398.htm" title="做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了">做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了</a></li>
+                        <li class="py-2"><a href="/news/article-93198.htm" title="SpringBoot中Starter的作用是什么">SpringBoot中Starter的作用是什么</a></li>
+                        <li class="py-2"><a href="/news/article-102851.htm" title="开宠物店亏本经历有哪些（开宠物店会亏本吗）">开宠物店亏本经历有哪些（开宠物店会亏本吗）</a></li>
                         <li class="py-2"><a href="/news/article-109460.htm" title="兰州宠物交易平台电话（兰州宠物交易市场）">兰州宠物交易平台电话（兰州宠物交易市场）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" title="4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-110318.htm" title="宠物店买的狗粮好吗（宠物店的狗粮都是从哪里来的）">宠物店买的狗粮好吗（宠物店的狗粮都是从哪里来的）</a></li>
-                        <li class="py-2"><a href="/news/article-101270.htm" title="Python实现双X轴双Y轴绘图">Python实现双X轴双Y轴绘图</a></li>
-                        <li class="py-2"><a href="/news/article-109464.htm" title="国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）">国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）</a></li>
-                        <li class="py-2"><a href="/news/article-105274.htm" title="适合初学者的C语言数据类型的讲解_C 语言">适合初学者的C语言数据类型的讲解_C 语言</a></li>
-                        <li class="py-2"><a href="/news/article-94194.htm" title="动物疫苗市场竞争（动物疫苗行业）">动物疫苗市场竞争（动物疫苗行业）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
                     </ul>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
