--- a/date/2025-04/page-2.htm
+++ b/date/2025-04/page-2.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-96203.htm" title="小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）">小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）</a></li>
-                        <li class="py-2"><a href="/news/article-107028.htm" title="驱虫给猫多少钱（驱虫猫多少钱一次）">驱虫给猫多少钱（驱虫猫多少钱一次）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-30-free-high-speed-nodes.htm" title="4月30日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月30日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-110316.htm" title="tensorflow求导和梯度计算">tensorflow求导和梯度计算</a></li>
+                        <li class="py-2"><a href="/news/article-108625.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-6-free-node-subscribe.htm" title="4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-105274.htm" title="适合初学者的C语言数据类型的讲解_C 语言">适合初学者的C语言数据类型的讲解_C 语言</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-13-node-share.htm" title="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-28-free-subscribe-node.htm" title="4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
-                        <li class="py-2"><a href="/news/article-88047.htm" title="vue实现列表拖拽排序的示例代码_vue.js">vue实现列表拖拽排序的示例代码_vue.js</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="4月11日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">4月11日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-101271.htm" title="沧州卖宠物的地方（沧州哪里有宠物店）">沧州卖宠物的地方（沧州哪里有宠物店）</a></li>
+                        <li class="py-2"><a href="/news/article-97654.htm" title="动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）">动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）</a></li>
+                        <li class="py-2"><a href="/news/article-105275.htm" title="dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）">dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）</a></li>
+                        <li class="py-2"><a href="/news/article-102851.htm" title="开宠物店亏本经历有哪些（开宠物店会亏本吗）">开宠物店亏本经历有哪些（开宠物店会亏本吗）</a></li>
+                        <li class="py-2"><a href="/news/article-102055.htm" title="vue.js实现标签页切换">vue.js实现标签页切换</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
