--- a/date/2025-04/page-3.htm
+++ b/date/2025-04/page-3.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-98399.htm" title="宠物领养平台论文绪论（宠物领养系统国内外现状）">宠物领养平台论文绪论（宠物领养系统国内外现状）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-22-free-high-speed-nodes.htm" title="4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-95454.htm" title="重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）">重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）</a></li>
+                        <li class="py-2"><a href="/news/article-101271.htm" title="沧州卖宠物的地方（沧州哪里有宠物店）">沧州卖宠物的地方（沧州哪里有宠物店）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-high-speed-nodes.htm" title="4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-108623.htm" title="Python格式化输出的三种方式：%、string.format()、f-string">Python格式化输出的三种方式：%、string.format()、f-string</a></li>
                         <li class="py-2"><a href="/news/article-106104.htm" title="无货源网店怎么开（无货源网店怎么开大概需要多少钱）">无货源网店怎么开（无货源网店怎么开大概需要多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-87314.htm" title="动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）">动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）</a></li>
-                        <li class="py-2"><a href="/news/article-105275.htm" title="dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）">dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）</a></li>
-                        <li class="py-2"><a href="/news/article-102848.htm" title="Ubuntu安装开发者平台Backstage">Ubuntu安装开发者平台Backstage</a></li>
-                        <li class="py-2"><a href="/news/article-103647.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-88048.htm" title="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-93198.htm" title="SpringBoot中Starter的作用是什么">SpringBoot中Starter的作用是什么</a></li>
+                        <li class="py-2"><a href="/news/article-107789.htm" title="福建农林动物医学学院（福建农林大学动物医学院）">福建农林动物医学学院（福建农林大学动物医学院）</a></li>
+                        <li class="py-2"><a href="/news/article-96204.htm" title="宠物粮食加工厂加盟电话地址是多少 宠物粮食加工厂加盟电话地址是多少号">宠物粮食加工厂加盟电话地址是多少 宠物粮食加工厂加盟电话地址是多少号</a></li>
+                        <li class="py-2"><a href="/news/article-109460.htm" title="兰州宠物交易平台电话（兰州宠物交易市场）">兰州宠物交易平台电话（兰州宠物交易市场）</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
