--- a/free-nodes/2025-5-4-free-high-speed-nodes.htm
+++ b/free-nodes/2025-5-4-free-high-speed-nodes.htm
@@ -148,6 +148,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-5-3-free-high-speed-nodes.htm">5月3日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-5-5-node-share.htm">5月5日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -176,16 +177,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-94194.htm" title="动物疫苗市场竞争（动物疫苗行业）">动物疫苗市场竞争（动物疫苗行业）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-22-free-high-speed-nodes.htm" title="4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-100649.htm" title="中国十大宠物食品公司 中国十大宠物食品公司排名">中国十大宠物食品公司 中国十大宠物食品公司排名</a></li>
-                        <li class="py-2"><a href="/news/article-87315.htm" title="动物疫苗接种简报标题新颖（动物预防接种计划表）">动物疫苗接种简报标题新颖（动物预防接种计划表）</a></li>
-                        <li class="py-2"><a href="/news/article-105275.htm" title="dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）">dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-109464.htm" title="国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）">国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）</a></li>
-                        <li class="py-2"><a href="/news/article-88766.htm" title="宠物食品批发网站有哪些（宠物食品批发商）">宠物食品批发网站有哪些（宠物食品批发商）</a></li>
-                        <li class="py-2"><a href="/news/article-98398.htm" title="做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了">做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了</a></li>
-                        <li class="py-2"><a href="/news/article-107789.htm" title="福建农林动物医学学院（福建农林大学动物医学院）">福建农林动物医学学院（福建农林大学动物医学院）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-9-free-node-subscribe.htm" title="5月9日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月9日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
+                        <li class="py-2"><a href="/news/article-99126.htm" title="猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）">猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-high-speed-nodes.htm" title="4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-107024.htm" title="微信小程序开发笔记2——自定义导航栏组件">微信小程序开发笔记2——自定义导航栏组件</a></li>
+                        <li class="py-2"><a href="/news/article-88047.htm" title="vue实现列表拖拽排序的示例代码_vue.js">vue实现列表拖拽排序的示例代码_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-90255.htm" title="动物接种疫苗多少钱一针啊图片大全（动物疫苗接种时间表）">动物接种疫苗多少钱一针啊图片大全（动物疫苗接种时间表）</a></li>
+                        <li class="py-2"><a href="/news/article-95455.htm" title="动物医院属于什么性质的单位（动物医院是宠物医院吗）">动物医院属于什么性质的单位（动物医院是宠物医院吗）</a></li>
                     </ul>
     </div>
 </div>
@@ -197,7 +198,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
